--- a/Tyuiu.ZhirenbaevaII.Sprint1.Task1.V5.Lib/Tyuiu.ZhirenbaevaII.Sprint1.Task1.V5.Lib.csproj
+++ b/Tyuiu.ZhirenbaevaII.Sprint1.Task1.V5.Lib/Tyuiu.ZhirenbaevaII.Sprint1.Task1.V5.Lib.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D4E84914-A572-4842-BDC6-02B3F1488DA4}</ProjectGuid>
+    <ProjectGuid>{B80C47AB-2335-4C5F-B07C-FB88D7E79033}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tyuiu.ZhirenbaevaII.Sprint1.Task0.V11</RootNamespace>
-    <AssemblyName>Tyuiu.ZhirenbaevaII.Sprint1.Task0.V11</AssemblyName>
+    <RootNamespace>Tyuiu.ZhirenbaevaII.Sprint1.Task1.V5.Lib</RootNamespace>
+    <AssemblyName>Tyuiu.ZhirenbaevaII.Sprint1.Task1.V5.Lib</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,9 +41,6 @@
     <Reference Include="System.Xml" />
     <Reference Include="tyuiu.cources.programming.interfaces">
       <HintPath>..\tyuiu.cources.programming.interfaces.dll</HintPath>
-    </Reference>
-    <Reference Include="tyuiu_cources_programming_interfaces">
-      <HintPath>..\..\..\..\Desktop\repos\tyuiu_cources_programming_interfaces.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
