--- a/Tyuiu.ZhirenbaevaII.Sprint1.Task1.V5/Tyuiu.ZhirenbaevaII.Sprint1.Task1.V5.csproj
+++ b/Tyuiu.ZhirenbaevaII.Sprint1.Task1.V5/Tyuiu.ZhirenbaevaII.Sprint1.Task1.V5.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D4E84914-A572-4842-BDC6-02B3F1488DA4}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tyuiu.ZhirenbaevaII.Sprint1.Task0.V11</RootNamespace>
-    <AssemblyName>Tyuiu.ZhirenbaevaII.Sprint1.Task0.V11</AssemblyName>
+    <ProjectGuid>{D0D67C8A-C949-4245-A493-488A972678A5}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>Tyuiu.ZhirenbaevaII.Sprint1.Task1.V5</RootNamespace>
+    <AssemblyName>Tyuiu.ZhirenbaevaII.Sprint1.Task1.V5</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -39,16 +41,19 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="tyuiu.cources.programming.interfaces">
-      <HintPath>..\tyuiu.cources.programming.interfaces.dll</HintPath>
-    </Reference>
-    <Reference Include="tyuiu_cources_programming_interfaces">
-      <HintPath>..\..\..\..\Desktop\repos\tyuiu_cources_programming_interfaces.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataService.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.ZhirenbaevaII.Sprint1.Task1.V5.Lib\Tyuiu.ZhirenbaevaII.Sprint1.Task1.V5.Lib.csproj">
+      <Project>{b80c47ab-2335-4c5f-b07c-fb88d7e79033}</Project>
+      <Name>Tyuiu.ZhirenbaevaII.Sprint1.Task1.V5.Lib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
